security: harden application against OWASP vulnerabilities
- Always enforce SSL verification on Fonnte API calls (HIGH)
- Add webhook secret token verification via query parameter (HIGH)
- Rotate CSRF token after successful validation (MEDIUM)
- Sanitize Content-Disposition header with RFC 5987 encoding (MEDIUM)
- Fix rate limiter race condition with flock() and move to storage/ (MEDIUM)
- Remove hardcoded fallback whitelist number (MEDIUM)
- Block reserved keys from extract() in View::render (MEDIUM)
- Guard error display behind both APP_DEBUG and APP_ENV (LOW)
- Catch and log exceptions in ExpenseController instead of rethrowing (LOW)
- Add security response headers (X-Frame-Options, CSP, etc.) (LOW)
- Use custom session name to reduce fingerprinting (LOW)
- Add explicit .env FilesMatch protection in .htaccess (LOW)

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,13 @@ DB_PASS=root
 # Format: Bearer token dari device WhatsApp
 FONNTE_TOKEN=your_fonnte_token_here
 
+# WEBHOOK SECRET
+# ===============
+# Secret token untuk verifikasi webhook request dari Fonnte.
+# Set di Fonnte dashboard sebagai query parameter: https://domain.com/webhook?secret=TOKEN_INI
+# Generate random string minimal 32 karakter.
+WEBHOOK_SECRET=
+
 # WHITELIST NUMBERS
 # =================
 # Nomor WhatsApp yang boleh akses bot, pisahkan dengan koma
