--- a/.htaccess
+++ b/.htaccess
@@ -21,3 +21,13 @@
         Deny from all
     </IfModule>
 </FilesMatch>
+
+<FilesMatch "^\.env">
+    <IfModule mod_authz_core.c>
+        Require all denied
+    </IfModule>
+    <IfModule !mod_authz_core.c>
+        Order Allow,Deny
+        Deny from all
+    </IfModule>
+</FilesMatch>
